--- a/emulator/emulator.vcxproj
+++ b/emulator/emulator.vcxproj
@@ -111,6 +111,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="cpu.cpp" />
+    <ClCompile Include="dummy_main.cpp" />
+    <ClCompile Include="instruction_decoder.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="cpu.h" />
+    <ClInclude Include="cpu_exception.h" />
+    <ClInclude Include="eflags.h" />
+    <ClInclude Include="instruction_decoder.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
