--- a/emulator/emulator.vcxproj
+++ b/emulator/emulator.vcxproj
@@ -114,12 +114,14 @@
     <ClCompile Include="cpu.cpp" />
     <ClCompile Include="dummy_main.cpp" />
     <ClCompile Include="instruction_decoder.cpp" />
+    <ClCompile Include="memory.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="cpu.h" />
     <ClInclude Include="cpu_exception.h" />
     <ClInclude Include="eflags.h" />
     <ClInclude Include="instruction_decoder.h" />
+    <ClInclude Include="memory.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
