--- a/emulator_test/emulator_test.vcxproj.filters
+++ b/emulator_test/emulator_test.vcxproj.filters
@@ -27,6 +27,18 @@
     <ClInclude Include="..\catch2\single_include\catch2\catch.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\emulator\cpu.h">
+      <Filter>Header Files\emulator_h</Filter>
+    </ClInclude>
+    <ClInclude Include="..\emulator\cpu_exception.h">
+      <Filter>Header Files\emulator_h</Filter>
+    </ClInclude>
+    <ClInclude Include="..\emulator\instruction_decoder.h">
+      <Filter>Header Files\emulator_h</Filter>
+    </ClInclude>
+    <ClInclude Include="..\emulator\memory.h">
+      <Filter>Header Files\emulator_h</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -40,6 +52,18 @@
     </ClCompile>
     <ClCompile Include="test_eflags.cpp">
       <Filter>Source Files\emulator_test</Filter>
+    </ClCompile>
+    <ClCompile Include="..\emulator\instruction_decoder.cpp">
+      <Filter>Source Files\emulator_cpp</Filter>
+    </ClCompile>
+    <ClCompile Include="test_instruction_decoder.cpp">
+      <Filter>Source Files\emulator_test</Filter>
+    </ClCompile>
+    <ClCompile Include="test_memory.cpp">
+      <Filter>Source Files\emulator_test</Filter>
+    </ClCompile>
+    <ClCompile Include="..\emulator\memory.cpp">
+      <Filter>Source Files\emulator_cpp</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
