--- a/emulator_test/emulator_test.vcxproj
+++ b/emulator_test/emulator_test.vcxproj
@@ -118,11 +118,13 @@
     <ClInclude Include="..\catch2\single_include\catch2\catch.hpp" />
     <ClInclude Include="..\emulator\cpu.h" />
     <ClInclude Include="..\emulator\cpu_exception.h" />
+    <ClInclude Include="..\emulator\instructions.h" />
     <ClInclude Include="..\emulator\instruction_decoder.h" />
     <ClInclude Include="..\emulator\memory.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\emulator\cpu.cpp" />
+    <ClCompile Include="..\emulator\instructions.cpp" />
     <ClCompile Include="..\emulator\instruction_decoder.cpp" />
     <ClCompile Include="..\emulator\memory.cpp" />
     <ClCompile Include="hello_world_test.cpp" />
